# judgement-text-annotator

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Web Ui模块说明文档.docx  大模型标记模块marker说明文档.docx
docs/images/: README.md
examples/: README.md
integrated_tests/: README.md
integrated_tests/sample/: README.md
tests/: README.md
tests/sample/: README.md
